namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-app
  labels:
    istio.io/rev: asm-1-27
