egress.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-google
  namespace: mesh-app
spec:
  hosts:
  - www.google.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
