gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: external-gw
  namespace: mesh-app
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: backend-vs
  namespace: mesh-app
spec:
  hosts:
  - "*"
  gateways:
  - external-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: backend
        port:
          number: 80
